--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+@import "packages/ui/src/styles/button.css";
+@import "packages/ui/src/styles/input.css";
+
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
